test/errors/enumeration_types_error/zs/duplicated_enum_value_error.zs
package duplicated_enum_value_error;

enum uint8 DuplicatedValueEnum
{
    NONE       = 000b,
    DARK_RED   = 001b,
    DARK_BLUE  = 001b,
    DARK_BLACK = 111b
};
